# CheckThat-AI

./: .gitignore  .replit  CNAME  LICENSE  README.md  citation.cff  claim_norm.py  docker-compose.yml  evaluate.py  finetune.py  finetunexamples.py  generated.json  generated_claims_dev.jsonl  inference.py  package-lock.json  package.json  process_data.py  prompt.jsonl  requirements.txt  run-project.sh  setup-project.sh  sub2.py  task2.ipynb  test_eng.csv  together_finetune.py  upload.py
src/app/: CNAME  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  theme.json  vite.config.ts
src/app/client/src/: App.tsx  config.ts  main.tsx
src/app/client/src/components/: ChatInterface.tsx  EvaluationInterface.tsx  EvaluationResults.tsx  ExtractionInterface.tsx  ExtractionResults.tsx  FieldMappingModal.tsx  Footer.tsx  Header.tsx  LandingPage.tsx  LoadingOverlay.tsx  login.tsx  scrollbar-hide.css
src/app/client/src/components/evaluation/: EvaluationMethodsCard.tsx  EvaluationMetricsCard.tsx  EvaluationProgressCard.tsx  FileUploadCard.tsx  ModelSelectionCard.tsx  PromptSelectionCard.tsx  SystemMessageCard.tsx  index.ts
src/app/client/src/components/extraction/: DeepEvalModal.tsx  EvaluationResultsSection.tsx  ExtractionDataViewer.tsx  index.ts  (+6 more)
src/app/client/src/contexts/: AppContext.tsx
src/app/client/src/hooks/: use-toast.ts
src/app/client/src/lib/: queryClient.ts  supabase.ts  utils.ts
src/app/client/src/pages/: AuthCallback.tsx
src/app/docs/: index.html
src/app/server/: index.ts  routes.ts  vite.ts
src/app/shared/: prompts.ts  types.ts
(+185 files in other folders)
